--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         etc.<br>
         Import a decklist:
         <br>
-        <textarea id="decklistField" value="" style="font-family: Arial; height:200px; width:500px"></textarea>
+        <textarea id="decklistField" value="" style="font-family: Arial; height:100px; width:500px"></textarea>
         <br>
         <button type="button" onclick="importDecklist()">Import decklist</button>
         <button type="button" onclick="clearDecklist()">Clear</button>
@@ -35,8 +35,8 @@
         Combined oracle text for word cloud:
         <br>
 
-        <textarea id="searchResultField" value="" style="font-family: Arial; height:500px; width:370px"></textarea>
-        <textarea id="searchResultFieldName" value="" style="font-family: Arial; height:500px; width:120px"></textarea>
+        <textarea id="searchResultField" value="" style="font-family: Arial; height:200px; width:370px"></textarea>
+        <textarea id="searchResultFieldName" value="" style="font-family: Arial; height:200px; width:120px"></textarea>
     </p>
 
     <script defer src="./wordcloud/src/wordcloud2.js"></script>
@@ -162,6 +162,9 @@
 
 
     </script>
+    <i>2023 Fisz-git</i><br>
+    <i>Card data obtained courtesy of Scryfall API <a href="https://scryfall.com/docs/api">https://scryfall.com/docs/api</a></i><br>
+    <i>Word cloud generated using wordcloud2.js <a href="https://github.com/timdream/wordcloud2.js">https://github.com/timdream/wordcloud2.jst</a></i>
 </body>
 
 </html>
