--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     <!--szukajka-->
     <p style="font-family:Arial">
 
-        IMPORTANT - DECKLIST FORMAT:<br>
+        <b>IMPORTANT - DECKLIST FORMAT:</b><br>
         1 CARD1<br>
         1 CARD2<br>
-        etc.<br><br>
+        etc.<br>
+        <b>NO SIDEBOARD, MAYBEBOARD HEADERS</b>
+        <br><br>
         Import a decklist:
         <br>
         <textarea id="decklistField" value=""
@@ -368,7 +370,7 @@
 
     </script>
     <p style="font-family:arial;">
-        <i>2023 Fisz-git v. 1.2.0</i><br>
+        <i>2023 Fisz-git v. 1.2.1</i><br>
         <i>Card data obtained courtesy of Scryfall API <a
                 href="https://scryfall.com/docs/api">https://scryfall.com/docs/api</a></i><br>
         <i>Word cloud generated using wordcloud2.js <a
