--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 importCardName = decklistArray[index];
                 importCardURL = `https://api.scryfall.com/cards/named?exact=${importCardName}`;
 
-                document.getElementById("waitingRoom").value = "Processing, please wait. [" + index + "]/[" + decklistArray.length + "]" + "[" + importCardName + "]";
+                document.getElementById("waitingRoom").value = "Processing, please wait. " + index + "/" + decklistArray.length + " [" + importCardName + "]";
 
                 const response = await fetch(importCardURL);
                 const cardData = await response.json();
@@ -290,9 +290,52 @@
                 color1 = "#fff799"
                 color2 = "#f24500"
                 color3 = "#256e00"
-            } else {
+            } else if (colors === "WUBR") {
+                color1 = "#defdff"
+                color2 = "#0081c2"
+                color3 = "#002436"
+                color4 = "#fc2200"
+            } else if (colors === "WUBG") {
+                color1 = "#d6ffef"
+                color2 = "#1f8bcf"
+                color3 = "#011826"
+                color4 = "#007006"
+            } else if (colors === "UBRG") {
+                color1 = "#375da3"
+                color2 = "#000f2b"
+                color3 = "#c41704"
+                color4 = "#006903"
+            } else if (colors === "WBRG") {
+                color1 = "#e3e3e3"
+                color2 = "#212121"
+                color3 = "#212121"
+                color4 = "#248000"
+            } else if (colors === "WURG") {
+                color1 = "#e5ffdb"
+                color2 = "#009df2"
+                color3 = "#f23000"
+                color4 = "#00a108"
+            } else if (colors === "WUBRG") {
+                color1 = "#ffffe6"
+                color2 = "#0086d4"
+                color3 = "#000000"
+                color4 = "#ff3300"
+                color5 = "#00a108"
+            }
+            else {
                 console.log('Waiting for decklist');
             }
+            
+            console.log(colors.length);
+            if (colors.length <= 3) {
+                color4 = color1;
+                color5 = color2;
+            }
+
+            if (colors.length === 4) {
+                color5 = "#787878"
+            }
+
             document.getElementById("waitingRoom").value = "Your decklist has been processed. You can create your wordcloud.";
         }
 
@@ -306,13 +349,14 @@
             WordCloud(document.getElementById('my_Canvas'), {
                 list: outputArray,
                 color: function () {
-                    return ([color1, color2, color3])[Math.floor(Math.random() * 3)]
+                    return ([color1, color2, color3, color4, color5])[Math.floor(Math.random() * 5)]
                 },
                 fontFamily: 'Couture',
                 backgroundColor: '#313338',
                 minRotation: 0,
                 maxRotation: 0,
                 weightFactor: 2,
+                shape: 'square',
                 shuffle: true
             });
             document.getElementById("waitingRoom").value = "Generate your wordcloud again or clear the decklist and import a new one.";
@@ -352,7 +396,7 @@
 
     </script>
     <p style="font-family:arial;">
-        <i>2023 Fisz-git v. 1.3.0</i><br>
+        <i>2023 Fisz-git v. 1.4.0</i><br>
         <i>Card data obtained courtesy of Scryfall API <a
                 href="https://scryfall.com/docs/api">https://scryfall.com/docs/api</a></i><br>
         <i>Word cloud generated using wordcloud2.js <a
